# roboracing-software

./: .gitmodules
rr_common/: CMakeLists.txt
rr_common/cfg/: planner_configuration.cfg
rr_common/launch/: demo_obstacle_follower.launch
rr_common/src/planner/: planner_node.cpp
rr_description/urdf/: evgp.urdf.xacro
rr_evgp/conf/: planner_sim.yaml  robot_localization_from_sensors.yaml  tags.yaml
rr_evgp/launch/: april_tag_detection.launch  localization.launch
rr_gazebo/launch/: macaroni_iarrc_noisy.launch
rr_iarrc/: CMakeLists.txt  color_detector_plugins.xml  lane_detector_plugins.xml  package.xml
rr_iarrc/conf/: planner_sim.yaml
rr_iarrc/launch/: laplacian_line_detector_front.launch
rr_iarrc/launch/drag_race/: drag.launch
rr_iarrc/launch/planners/: drag_centerline_planner.launch  drag_centerline_planner_contours.launch  urc_centerline_planner.launch
rr_iarrc/launch/urban/: laplacian_line_detector_side.launch
rr_iarrc/src/drag_centerline_planner/: CMakeLists.txt  drag_centerline_planner.cpp  drag_centerline_planner_contours.cpp
rr_iarrc/src/laplacian_line_detection/: CMakeLists.txt  laplacian_line_detector.cpp  laplacian_line_detector.h
rr_iarrc/src/laplacian_line_detector/: CMakeLists.txt  laplacian_line_detector.cfg  laplacian_line_detector.cpp  laplacian_line_detector.h
rr_platform/: CMakeLists.txt
rr_platform/include/rr_platform/: EthernetSocket.h
rr_platform/launch/: rigatoni.launch  rigatoni_ethernet_drive_relay.launch  sedani_record_data.launch
rr_rviz_plugins/src/: SpeedGraphPanel.cpp
util/: rosbag_filter.py
(+8 files in other folders)
